--- a/posts/tech/黑马头条（2）.md
+++ b/posts/tech/黑马头条（2）.md
@@ -9,15 +9,28 @@ tags : ["Java", "Web"]
 
 # 黑马头条（2）
 
+## 表结构分析
+
+ap_article  文章基本信息表
+
+![image-20210419151839634](https://raw.githubusercontent.com/Kennems/blog-image/main/image-20210419151839634.png)
+
+ap_article_config  文章配置表
+
+![image-20210419151854868](https://raw.githubusercontent.com/Kennems/blog-image/main/image-20210419151854868.png)
+
+ap_article_content 文章内容表
+
+![image-20210419151912063](https://raw.githubusercontent.com/Kennems/blog-image/main/image-20210419151912063.png)
+
+三张表关系分析
+
+![image-20210419151938103](https://raw.githubusercontent.com/Kennems/blog-image/main/image-20210419151938103.png)
+
 - 从业务角度分析如何分表
 - 滚屏分页的逻辑
 
-大文本静态化方案：
-
-- `freemarker`
-- `minio`
-
-## 表的拆分-垂直分表
+### 表的拆分-垂直分表
 
 **垂直分表**：将一个表的字段分散到多个表中，每个表存储其中一部分字段。
 
@@ -32,7 +45,299 @@ tags : ["Java", "Web"]
 2. 把text、blob等**大字段**拆分出来单独放在一张表
 3. **经常组合查询的字段**单独放在一张表中
 
+### 导入对应实体类
+
+#### ApArticle
+
+```java
+package com.heima.model.article.pojos;
+
+import com.baomidou.mybatisplus.annotation.IdType;
+import com.baomidou.mybatisplus.annotation.TableField;
+import com.baomidou.mybatisplus.annotation.TableId;
+import com.baomidou.mybatisplus.annotation.TableName;
+import lombok.Data;
+
+import java.io.Serializable;
+import java.util.Date;
+
+/**
+ * <p>
+ * 文章信息表，存储已发布的文章
+ * </p>
+ *
+ * @author itheima
+ */
+
+@Data
+@TableName("ap_article")
+public class ApArticle implements Serializable {
+
+    @TableId(value = "id",type = IdType.ID_WORKER)
+    private Long id;
+
+
+    /**
+     * 标题
+     */
+    private String title;
+
+    /**
+     * 作者id
+     */
+    @TableField("author_id")
+    private Long authorId;
+
+    /**
+     * 作者名称
+     */
+    @TableField("author_name")
+    private String authorName;
+
+    /**
+     * 频道id
+     */
+    @TableField("channel_id")
+    private Integer channelId;
+
+    /**
+     * 频道名称
+     */
+    @TableField("channel_name")
+    private String channelName;
+
+    /**
+     * 文章布局  0 无图文章   1 单图文章    2 多图文章
+     */
+    private Short layout;
+
+    /**
+     * 文章标记  0 普通文章   1 热点文章   2 置顶文章   3 精品文章   4 大V 文章
+     */
+    private Byte flag;
+
+    /**
+     * 文章封面图片 多张逗号分隔
+     */
+    private String images;
+
+    /**
+     * 标签
+     */
+    private String labels;
+
+    /**
+     * 点赞数量
+     */
+    private Integer likes;
+
+    /**
+     * 收藏数量
+     */
+    private Integer collection;
+
+    /**
+     * 评论数量
+     */
+    private Integer comment;
+
+    /**
+     * 阅读数量
+     */
+    private Integer views;
+
+    /**
+     * 省市
+     */
+    @TableField("province_id")
+    private Integer provinceId;
+
+    /**
+     * 市区
+     */
+    @TableField("city_id")
+    private Integer cityId;
+
+    /**
+     * 区县
+     */
+    @TableField("county_id")
+    private Integer countyId;
+
+    /**
+     * 创建时间
+     */
+    @TableField("created_time")
+    private Date createdTime;
+
+    /**
+     * 发布时间
+     */
+    @TableField("publish_time")
+    private Date publishTime;
+
+    /**
+     * 同步状态
+     */
+    @TableField("sync_status")
+    private Boolean syncStatus;
+
+    /**
+     * 来源
+     */
+    private Boolean origin;
+
+    /**
+     * 静态页面地址
+     */
+    @TableField("static_url")
+    private String staticUrl;
+}
+```
+
+#### ap_article_config文章配置对应实体类
+
+```java
+package com.heima.model.article.pojos;
+
+import com.baomidou.mybatisplus.annotation.IdType;
+import com.baomidou.mybatisplus.annotation.TableField;
+import com.baomidou.mybatisplus.annotation.TableId;
+import com.baomidou.mybatisplus.annotation.TableName;
+import lombok.Data;
+
+import java.io.Serializable;
+
+/**
+ * <p>
+ * APP已发布文章配置表
+ * </p>
+ *
+ * @author itheima
+ */
+
+@Data
+@TableName("ap_article_config")
+public class ApArticleConfig implements Serializable {
+
+    @TableId(value = "id",type = IdType.ID_WORKER)
+    private Long id;
+
+    /**
+     * 文章id
+     */
+    @TableField("article_id")
+    private Long articleId;
+
+    /**
+     * 是否可评论
+     * true: 可以评论   1
+     * false: 不可评论  0
+     */
+    @TableField("is_comment")
+    private Boolean isComment;
+
+    /**
+     * 是否转发
+     * true: 可以转发   1
+     * false: 不可转发  0
+     */
+    @TableField("is_forward")
+    private Boolean isForward;
+
+    /**
+     * 是否下架
+     * true: 下架   1
+     * false: 没有下架  0
+     */
+    @TableField("is_down")
+    private Boolean isDown;
+
+    /**
+     * 是否已删除
+     * true: 删除   1
+     * false: 没有删除  0
+     */
+    @TableField("is_delete")
+    private Boolean isDelete;
+}
+```
+
+#### ap_article_content 文章内容对应的实体类
+
+```java
+package com.heima.model.article.pojos;
+
+import com.baomidou.mybatisplus.annotation.IdType;
+import com.baomidou.mybatisplus.annotation.TableField;
+import com.baomidou.mybatisplus.annotation.TableId;
+import com.baomidou.mybatisplus.annotation.TableName;
+import lombok.Data;
+
+import java.io.Serializable;
+
+@Data
+@TableName("ap_article_content")
+public class ApArticleContent implements Serializable {
+
+    @TableId(value = "id",type = IdType.ID_WORKER)
+    private Long id;
+
+    /**
+     * 文章id
+     */
+    @TableField("article_id")
+    private Long articleId;
+
+    /**
+     * 文章内容
+     */
+    private String content;
+}
+```
+
+### 接口定义
+
+|          | **加载首页**         | **加载更多**             | **加载最新**            |
+| -------- | -------------------- | ------------------------ | ----------------------- |
+| 接口路径 | /api/v1/article/load | /api/v1/article/loadmore | /api/v1/article/loadnew |
+| 请求方式 | POST                 | POST                     | POST                    |
+| 参数     | ArticleHomeDto       | ArticleHomeDto           | ArticleHomeDto          |
+| 响应结果 | ResponseResult       | ResponseResult           | ResponseResult          |
+
+ArticleHomeDto
+
+```java
+package com.heima.model.article.dtos;
+
+import lombok.Data;
+
+import java.util.Date;
+
+@Data
+public class ArticleHomeDto {
+
+    // 最大时间
+    Date maxBehotTime;
+    // 最小时间
+    Date minBehotTime;
+    // 分页size
+    Integer size;
+    // 频道ID
+    String tag;
+}
+```
+
+导入heima-leadnews-article微服务，资料在当天的文件夹中
+
+
+
 ## 文章详情
+
+大文本静态化方案：
+
+- `freemarker`
+- `minio`
 
 ### `FreeMarker`
 
