--- a/posts/life/20250913 星期六 养猫一个月.md
+++ b/posts/life/20250913 星期六 养猫一个月.md
@@ -7,9 +7,9 @@ draft : false
 #categories : ["生活记录"]
 tags : ["生活记录"]
 cover: 
-    #image: img/琴女.jpg
+    image: img/250913cat.jpg
     # 设置图片的小标题
-    alt: "琴女"
+    alt: "咪咪"
     #caption: "琴女"
     hidden: true        # 文章页面隐藏封面图片
 ---
