--- a/posts/life/20250913 星期六 养猫一个月.md
+++ b/posts/life/20250913 星期六 养猫一个月.md
@@ -22,7 +22,7 @@ cover:
 
 ![image-20250913161913476](https://raw.githubusercontent.com/Kennems/blog-image/main/image-20250913161913476.png)
 
-![image-20250913162439256](C:\Users\Acer\AppData\Roaming\Typora\typora-user-images\image-20250913162439256.png)
+![微信图片_20250913194129](https://raw.githubusercontent.com/Kennems/blog-image/main/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20250913194129.jpg)
 
 ![image-20250913162501865](https://raw.githubusercontent.com/Kennems/blog-image/main/image-20250913162501865.png)
 
